--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
 #! https://just-the-docs.github.io/just-the-docs/docs/configuration/
 
+render_with_liquid: false
+
 # Color scheme supports "light" (default) and "dark"
 color_scheme: dark
 
